[gd_scene load_steps=5 format=3 uid="uid://b6ak8mmd81jv2"]

[ext_resource type="Script" path="res://Scripts/UI/PowerAndExposure.gd" id="1_0asmr"]
[ext_resource type="FontFile" uid="uid://c5jqyemsa330f" path="res://UI/Roboto/Roboto-Black.ttf" id="1_1jwrc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jfwfh"]
content_margin_left = 30.0
content_margin_right = 30.0
bg_color = Color(1, 1, 1, 1)
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q5iqk"]
bg_color = Color(1, 1, 1, 1)

[node name="PowerExposure" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 237.0
offset_bottom = 105.0
script = ExtResource("1_0asmr")

[node name="PanelLabel" type="Label" parent="."]
self_modulate = Color(0.6, 0.6, 0.6, 1)
layout_mode = 1
offset_top = -12.0
offset_right = 762.0
offset_bottom = 118.0
scale = Vector2(0.0919469, 0.0919469)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_1jwrc")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_jfwfh")
text = "LED Power And Exposure
"

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(0.541176, 0.541176, 0.541176, 1)
clip_contents = true
offset_right = 237.0
offset_bottom = 105.0
theme_override_styles/panel = SubResource("StyleBoxFlat_q5iqk")

[node name="DapiLabelContainer" type="HBoxContainer" parent="Panel"]
clip_contents = true
layout_mode = 1
offset_right = 262.0
offset_bottom = 125.0
scale = Vector2(0.111304, 0.111719)
focus_mode = 1

[node name="DapiLabel" type="Label" parent="Panel/DapiLabelContainer"]
self_modulate = Color(0.329412, 0.298039, 0.87451, 1)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_1jwrc")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_jfwfh")
text = "Dapi"

[node name="FITCLabelContainer" type="HBoxContainer" parent="Panel"]
clip_contents = true
offset_right = 262.0
offset_bottom = 125.0
scale = Vector2(0.111304, 0.111719)
focus_mode = 1

[node name="FITCLabel" type="Label" parent="Panel/FITCLabelContainer"]
self_modulate = Color(0.160784, 0.52549, 0.262745, 1)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_1jwrc")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_jfwfh")
text = "FITC"

[node name="RITCLabelContainer" type="HBoxContainer" parent="Panel"]
clip_contents = true
offset_right = 262.0
offset_bottom = 125.0
scale = Vector2(0.111304, 0.111719)
focus_mode = 1

[node name="RITCLabel" type="Label" parent="Panel/RITCLabelContainer"]
self_modulate = Color(1, 0.0392157, 0.0235294, 1)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_1jwrc")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_jfwfh")
text = "RITC
"

[node name="Cy5LabelContainer" type="HBoxContainer" parent="Panel"]
clip_contents = true
offset_right = 262.0
offset_bottom = 125.0
scale = Vector2(0.111304, 0.111719)
focus_mode = 1

[node name="Cy5Label" type="Label" parent="Panel/Cy5LabelContainer"]
self_modulate = Color(1, 0.0392157, 0.984314, 1)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_1jwrc")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_jfwfh")
text = "Cy5"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel"]
clip_contents = true
offset_top = 18.0
offset_right = 530.0
offset_bottom = 143.0
scale = Vector2(0.111304, 0.111719)
focus_mode = 1

[node name="LEDPowerLabel" type="Label" parent="Panel/HBoxContainer2"]
self_modulate = Color(0.6, 0.6, 0.6, 1)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_1jwrc")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_jfwfh")
text = "LED Power:
"

[node name="LEDPowerVal" type="Label" parent="Panel/HBoxContainer2"]
self_modulate = Color(0.6, 0.6, 0.6, 1)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_1jwrc")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_jfwfh")
text = "0%"

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel"]
clip_contents = true
offset_top = 58.0
offset_right = 809.0
offset_bottom = 183.0
scale = Vector2(0.111304, 0.111719)
focus_mode = 1

[node name="ExposureTimeLabel" type="Label" parent="Panel/HBoxContainer3"]
self_modulate = Color(0.6, 0.6, 0.6, 1)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_1jwrc")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_jfwfh")
text = "Exposure Time:
"

[node name="ExposureTimeVal" type="Label" parent="Panel/HBoxContainer3"]
self_modulate = Color(0.6, 0.6, 0.6, 1)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_1jwrc")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_jfwfh")
text = "1 msec"

[node name="HBoxContainer4" type="HBoxContainer" parent="Panel"]
clip_contents = true
offset_left = 3.0
offset_top = 38.0
offset_right = 2069.0
offset_bottom = 163.0
scale = Vector2(0.111, 1)
focus_mode = 1

[node name="PowerSlider" type="HSlider" parent="Panel/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
tick_count = 10

[node name="HBoxContainer5" type="HBoxContainer" parent="Panel"]
clip_contents = true
offset_left = 3.0
offset_top = 78.0
offset_right = 2069.0
offset_bottom = 203.0
scale = Vector2(0.111, 1)
focus_mode = 1

[node name="ExposureSlider" type="HSlider" parent="Panel/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 5000.0
value = 1.0
tick_count = 10

[connection signal="value_changed" from="Panel/HBoxContainer4/PowerSlider" to="." method="_on_power_slider_value_changed"]
[connection signal="value_changed" from="Panel/HBoxContainer5/ExposureSlider" to="." method="_on_exposure_slider_value_changed"]
